Added the basic html structure

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 body {
     background: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/174/780/original/floating-laughing-emoji_53876-89114.jpg?1760377476");
 background-size: cover;
+align: center;
 }
