--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,82 @@
 body {
     background: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/174/780/original/floating-laughing-emoji_53876-89114.jpg?1760377476");
 background-size: cover;
-align: center;
+  font-family:  "Comic Relief", system-ui
+}
+
+a{
+    color: #0daef8;
+}
+
+header {
+    margin-bottom: 30px;
+}
+
+h1 {
+    text-align: center;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 1.5;
+    Color: rgb(26, 26, 79);
+    font-family:  "Comic Relief", system-ui
+}
+.container{
+    margin: 120px auto;
+    max-width: 600px;
+}
+
+
+
+
+
+
+form{
+    padding: 30px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+    margin-bottom: 30px;
+    font-family:"Comic Relief", system-ui;
+}
+
+.prompt{
+    padding: 16px;
+    border: 1px solid rgba(39, 33, 66, 0.5);
+    width: 80%;
+    font-size: 16px;
+    border-radius: 50px;
+    line-height: 20px;
+    color: black;
+    font-family:  "Comic Relief", system-ui;
+}
+
+.submit-button{
+    margin-left: 10px;
+    background-color: #0daef8;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 14px 24px;
+    font-size: 16px;
+    font-family:  "Comic Relief", system-ui;
+
+}
+
+.joke{
+    font-size: 16px;
+    background-color: white;
+    padding: 20px;
+    line-height: 24px;
+    border-left: 3px solid #0daef8;
+    box-shadow:  0px 20px 60px rgba(65, 50, 100, 0.08);
+    border-radius: 10px;
+    font-family:  "Comic Relief", system-ui;
+}
+
+footer{
+    text-align: center;
+    font-size: 13px;
+    margin-top: 30px;
+
 }
