--- a/src/style.css
+++ b/src/style.css
@@ -25,18 +25,26 @@ h1 {
     max-width: 600px;
 }
 
+.form-container {
+   background-color: white;
+     margin-bottom: 30px;
+      border-radius: 10px;
+      box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);  
+    padding: 15px 20px;
+}
 
-
-
+.hint {
+    line-height: 1.5;
+    font-size: 12px;
+    margin-top: 5px;
+    opacity: 0.6;
+}
 
 
 form{
-    padding: 30px;
-    background-color: white;
-    border-radius: 10px;
+   
     display: flex;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-    margin-bottom: 30px;
     font-family:"Comic Relief", system-ui;
 }
 
@@ -63,6 +71,10 @@ form{
 
 }
 
+.hidden  {
+    display: none;
+}
+
 .joke{
     font-size: 16px;
     background-color: white;
@@ -72,6 +84,20 @@ form{
     box-shadow:  0px 20px 60px rgba(65, 50, 100, 0.08);
     border-radius: 10px;
     font-family:  "Comic Relief", system-ui;
+  
+}
+
+.generating {
+    animation: blink-animation 1s steps (5, start) infinite;
+}
+
+@key-frames blink-animation {
+    to {visibility: hidden;}
+
+}
+
+@-webkit-keyframes blink-animation {
+    to {visibility: hidden;}
 }
 
 footer{
@@ -81,6 +107,3 @@ footer{
 
 }
 
-.typewriter{
-    color: black;
-}
